# Engine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  LICENSE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  material.txt
Engine.dir/Debug/Engine.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Engine.lastbuildstate
resources/shader/: basic.shader  cube.shader  cube_map.shader  flashlight.shader  flashlight_soft.shader  light.shader  light_cube.shader  light_direction.shader  model.shader  multiple_light.shader  point_light.shader
source/: Application.cpp  Application.h  Application.hpp  Base.hpp
source/GUI/: GUI.cpp  GUI.h  GUI.hpp  Log.cpp  Log.hpp  Viewport.cpp  Viewport.hpp
source/Panel/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  TextureViewerPanel.cpp  TextureViewerPanel.hpp
source/Rendering/: Camera.cpp  Camera.h  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp  IndexBuffer.cpp  IndexBuffer.h  Mesh.h  Mesh.hpp  Model.h  Model.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.h  Texture.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  VertexBufferLayout.hpp  cube.txt
source/Scene/: Entity.hpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
